src/components/Cards/Cards.module.css
.root {
  margin: 50px 0;
}

.card {
  padding: 10px 0;
  min-width: 250px;
  max-width: 250px;
  box-shadow: 5px 5px 2px lightgray !important;
  border-top: 8px solid rgba(255, 255, 255, 1);
}

.card:hover {
  box-shadow: 15px 18px 12px lightgray !important;

}

.infected {
  border-bottom: 8px solid rgba(0, 0, 255, 0.5);
}

.recovered {
  border-bottom: 8px solid rgba(0, 255, 0, 0.5);
}

.deaths {
  border-bottom: 8px solid rgba(255, 0, 0, 0.5);
}

.active {
  border-bottom: 8px solid rgba(0, 140, 140, 0.5);
}

